vm-policy-blue-red/yaml/blue-vm2.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-vm2-service
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 22
    targetPort: 22
    protocol: TCP
    name: ssh
  selector:
    kubevirt.io/domain: blue-vm2
    name: blue-vm2
    org: blue
