vm-policy-blue-red/yaml/red-vm1.yaml
apiVersion: v1
kind: Service
metadata:
  name: red-vm1-service
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 22
    targetPort: 22
    protocol: TCP
    name: ssh
  selector:
    kubevirt.io/domain: red-vm1
    name: red-vm1
    org: red
