vm-policy-blue-red/yaml/virtual-machine.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: kubevirt-demo
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 22
    targetPort: 22
    protocol: TCP
    name: ssh
  selector:
    kubevirt.io/domain: blue-vm1
    name: blue-vm1
