vm-policy-blue-red/yaml/blue-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "bluerule1"
spec:
  description: "L3-L4 policy to restrict blue vm access to blue vm only"
  endpointSelector:
    matchLabels:
      org: blue
  ingress:
  - fromEndpoints:
    - matchLabels:
        org: blue
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "22"
        protocol: TCP
