vm-policy-blue-red/yaml/red-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "redrule1"
spec:
  description: "L3-L4 policy to restrict red vm access to red vm only"
  endpointSelector:
    matchLabels:
      org: red
  ingress:
  - fromEndpoints:
    - matchLabels:
        org: red
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "22"
        protocol: TCP
